# geobridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
app/: globals.css  layout.tsx  page.tsx
components/: city2graph-section.tsx  environment-visualizations.tsx  error-section.tsx  graph-visualizations.tsx  input-form.tsx  morphology-card.tsx  progress-tracker.tsx  proximity-card.tsx  report-section.tsx  report-view.tsx  source-badge.tsx
components/charts/: chart-primitives.tsx  chart-section.tsx  land-price-chart.tsx  trend-chart.tsx
lib/: coerce-number.ts  config.ts  db.ts  geocode.ts  land-price.ts  monthly-timeseries.ts  precipitation.ts
lib/city2graph/: analyze.py  categories.ts  client.ts  colors.ts  constants.ts  data-status.ts  proximity-utils.ts  pyproject.toml  types.ts
lib/city2graph/tests/: conftest.py  helpers.py  test_dispatch.py  test_isochrone.py  test_morphology.py  test_proximity.py  test_utils.py
lib/llm/: ollama.ts  (+3 more)
old/: idea.md  jaxa-mlit-mcp-spec.md  plan.md  research.md  spec.md
plans/: gentle-giggling-hamster.md  issues.md  lovely-meandering-waterfall.md  optimized-swinging-swan.md  sequential-booping-sifakis.md  task.md  task3.md  zazzy-gliding-pelican.md
scripts/: geo-test.ts  setup-mcp-servers.sh  spike-final.ts  spike-test-debug.ts  spike-test-v2.ts  spike-test-v3.ts  spike-test.ts
tests/: city2graph-normalizer.test.ts  city2graph-ui.test.ts  data-regressions.test.ts  geospatial-client.test.ts  jaxa-normalizer.test.ts
(+47 files in other folders)
